--- a/assets/scss/components/_Header.scss
+++ b/assets/scss/components/_Header.scss
@@ -4,7 +4,6 @@
 
   &-logo {
     display: block;
-    margin: auto 0;
   }
 
   &-logo-text{
