--- a/assets/scss/modules/_variables.scss
+++ b/assets/scss/modules/_variables.scss
@@ -24,6 +24,6 @@ $enable-rounded:            false;
 $container-max-widths: (
   sm: 576px,
   md: 720px,
-  lg: 700px,
+  lg: 800px,
   xl: 800px
 ) !default;
